--- a/lab-4-student.qmd
+++ b/lab-4-student.qmd
@@ -23,7 +23,7 @@ The data come to us from [TidyTuesday](https://github.com/rfordatascience/tidytu
 
 ```{r}
 #| label: setup
-
+library(tidyverse)
 ```
 
 ```{r}
@@ -35,7 +35,7 @@ counties <- read_csv('https://raw.githubusercontent.com/rfordatascience/tidytues
 ```
 
 **1. Briefly describe the dataset (~ 4 sentences). What information does it contain?**
-
+The dataset childcare_costs has the county code that identifies a specific county. It also contains variables the year a study was done, the demographics of childcare costs. The counties dataset only has four variables, the county code, county name, state and state abbreviation. Seeing that the county code is in both datasets, we might be able to joun them off of that.
 ## California Childcare Costs
 
 Let's start by focusing only on California. 
@@ -45,7 +45,12 @@ Let's start by focusing only on California.
 
 ```{r}
 #| label: ca-childcare-costs
-
+ca_childcare <- counties %>% 
+  filter(state_abbreviation == "CA") %>% 
+  select(county_fips_code, county_name) %>% 
+  inner_join(childcare_costs,
+             join_by(county_fips_code == county_fips_code))
+  
 ```
 
 **3. Using a function from the `forcats` package, complete the code below to create a new variable where each county is categorized into one of the [10 Census regions](https://census.ca.gov/regions/) in California. Use the Region description (from the plot), not the Region number.**  
@@ -55,8 +60,48 @@ Let's start by focusing only on California.
 #| label: recoding-county-to-census-regions
 
 ca_childcare <- ca_childcare |> 
-  mutate(county_name = str_remove(county_name, " County")) |>
-  ...
+  mutate(county_name = fct(str_remove(county_name, " County"))) %>%
+  mutate(region = fct_collapse(.f = county_name,
+                               "Superior California" = c("Butte", "Colusa",
+                                                         "El Dorado", "Glenn",
+                                                         "Lassen", "Modoc",
+                                                         "Nevada", "Placer",
+                                                         "Plumas", "Sacramento",
+                                                         "Shasta", "Sierra",
+                                                         "Siskiyou", "Sutter",
+                                                         "Tehama", "Yolo",
+                                                         "Yuba"),  
+                               "North Coast" = c("Del Norte", "Humboldt",
+                                                 "Lake", "Mendocino", "Napa",
+                                                 "Sonoma", "Trinity"),
+                               "San Francisco Bay Area" = c("Alameda",
+                                                            "Contra Costa",
+                                                            "Marin", 
+                                                            "San Francisco",
+                                                            "San Mateo",
+                                                            "Santa Clara",
+                                                            "Solano"),
+                               "Central Sierra" = c("Alpine", "Amador",
+                                                    "Calaveras", "Madera",
+                                                    "Mariposa", "Merced",
+                                                    "Mono", "San Joaquin",
+                                                    "Stanislaus", "Tuolumne"),
+                               "Central Coast" = c("Monterey", "San Benito",
+                                                   "San Luis Obispo",
+                                                   "Santa Barbara",
+                                                   "Santa Cruz", "Ventura"),  
+                               "San Joaquin Valley" = c("Fresno", "Inyo",
+                                                        "Kern", "Kings",
+                                                        "Tulare"),  
+                               "Inland Empire" = c("Riverside",
+                                                   "San Bernardino"),
+                               "Los Angeles County" = "Los Angeles",
+                               "Orange County" = "Orange",  
+                               "San Diego Imperial" = c("Imperial", "San Diego")
+                               ))
+
+
+
 ```
 
 
@@ -65,15 +110,29 @@ ca_childcare <- ca_childcare |>
 ```{r}
 #| label: median-income-by-region-over-time
 
+median_income <- ca_childcare %>% 
+  filter(study_year == 2008 | study_year == 2018) %>%
+  group_by(region, study_year) %>% 
+  summarize(med = median(mhi_2018, na.rm = TRUE)) %>% 
+  pivot_wider(names_from = study_year, values_from = med)
+
+print(median_income)
+
 ```
 
 
 **5. Which California `region` had the lowest `median` full-time median weekly price for center-based childcare for infants in 2018? Does this `region` correspond to the `region` with the lowest `median` income in 2018 that you found in Q4?**  
 *Hint: The code should give me the EXACT answer. This means having the code output the exact row(s) and variable(s) necessary for providing the solution.*
-
+The region that had the lowest median full-time median weekly price for center-based childcare for infants in 2018 was Superior California, which does not match with the region with the lowest med household income in 2018 for Q4 which was North Coast
 ```{r}
 #| label: lowest-median-weekly-price-2018
+low_median_week <- ca_childcare %>% 
+  filter(study_year == 2018) %>%
+  group_by(region, study_year) %>% 
+  summarize(low = min(median(mc_infant, na.rm = TRUE))) %>% 
+  pivot_wider(names_from = study_year, values_from = low)
 
+print(low_median_week)
 ```
 
 **6. The following plot shows, for all ten regions, the change over time of the full-time median price for center-based childcare for infants, toddlers, and preschoolers. Recreate the plot. You do not have to replicate the exact colors or theme, but your plot should have the same content, including the order of the facets and legend, reader-friendly labels, axes breaks, and a loess smoother.**
@@ -82,6 +141,32 @@ ca_childcare <- ca_childcare |>
 
 ```{r}
 #| label: recreate-plot
+
+childcare_long <- ca_childcare %>%
+  pivot_longer(cols = c(mc_infant, mc_toddler, mc_preschool),
+    names_to = "age_group",
+    values_to = "price") %>%
+  mutate(age_group = recode(age_group,
+                       "mc_infant" = "Infant",
+                       "mc_toddler" = "Toddler",
+                       "mc_preschool" = "Preschool"))
+ggplot(data = childcare_long,
+       mapping = aes(x = study_year, y = price, color = region)) +
+  geom_point(size = 0.75, alpha = 0.5) +
+  geom_smooth(method = "loess", linewidth = 0.75) +
+  facet_wrap(~ age_group) + 
+  scale_x_continuous(breaks = seq(2008, 2018, by = 2)) + 
+  labs(title = "Weekly Median Price for Center-Based Childcare ($)",
+    x = "Study Year",
+    y = "",
+    color = "California Region") +
+  theme(legend.position = "right",
+        legend.text = element_text(size = 8),
+        legend.title = element_text(size = 10),
+        strip.text = element_text(size = 10),
+        axis.text = element_text(size = 6)) +
+  coord_fixed(ratio = 1/30)
+
 
 ```
 
